2006-10-24  Junichi Uekawa  <dancer@debian.org>

	* examples/E50-initscripts-2.86.ds1-7.workaround.sh: workaround
	postinst which mounts /lib/init/rw

	* Documentation/pbuilder-doc.xml: remove the note saying that
	pbuilder-user-mode-linux is not available.

2006-10-23  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: s/cowdancer/cowbuilder/

2006-09-16  Junichi Uekawa  <dancer@debian.org>

	* added patch from Mattia Dongili <malattia@linux.it> for pbuilder-uml.
	diffstat /tmp/pbuilder-uml.diff 
	debian/rules             |   16 ++++++++++++++--
	pbuilder-checkparams     |    2 +-
	pbuilder-uml-checkparams |    2 +-
	pbuilder-user-mode-linux |   20 +++++++++++++++-----
	pdebuild-uml-checkparams |    2 +-
	pdebuild-user-mode-linux |    2 +-
	6 files changed, 33 insertions(+), 11 deletions(-)

2006-09-03  Junichi Uekawa  <dancer@debian.org>

	* examples/B90linda, etc.: add notice that it's usable for hookdir.

2006-09-02  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams (BASEBUILDPLACE): support --login, --execute, --pdebuild

2006-08-25  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules: support for selinux.

2006-08-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-checkparams: sort and reverse-sort bindmounts
	* pbuilder-modules: 

2006-08-15  Junichi Uekawa  <dancer@debian.org>

	* debian/control (Recommends): recommend cowdancer, for those
	people who complain about speed.

	* debian/TODO: update the TODO file for a change.

	* pbuilder-checkparams: PKGNAME_LOGFILE option support 
	* pbuilderrc: PKGNAME_LOGFILE option support 
	* pbuilderrc.5: PKGNAME_LOGFILE option support 

2006-07-23  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation on fakechroot.

2006-06-26  Junichi Uekawa  <dancer@debian.org>

	* pdebuild-internal: export DEBBUILDOPTS

2006-06-17  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh: remove sarge from test target, since I