@@ -1,3 +1,7 @@
+2006-10-27  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: update developers documentation.
+
 2006-10-24  Junichi Uekawa  <dancer@debian.org>
 
 	* examples/E50-initscripts-2.86.ds1-7.workaround.sh: workaround
